prevent flicker selection

--- a/modules/ui/src/components/TitlePage/TitlePage.css
+++ b/modules/ui/src/components/TitlePage/TitlePage.css
@@ -57,6 +57,8 @@
 
 .titlePageBoardGamesFlicker > button {
   height: 60px;
+  -webkit-user-select: none;
+  user-select: none;
 }
 
 .titlePageLogo {
